Adjust z-index for consent module to fix stacking issue

--- a/overrides/assets/css/modules/consent.scss
+++ b/overrides/assets/css/modules/consent.scss
@@ -152,7 +152,7 @@
   left: 0 !important;
   bottom: auto !important;
   right: auto !important;
-  z-index: 9999 !important;
+  z-index: 19999 !important;
   margin: 0 !important;
 }
 
